static/css/timetable/partials/user_settings_modal.scss
.user-settings-modal {
  > div {
    height: 100%;
    outline: none;
  }

  .modal-header {
    @include theme() {
      background-color: t("modal-header-background");
      border-bottom: 1px solid t("modal-border-color");
    }
    padding: 25px;
    position: relative;
    text-align: left;
  }

  .name-greeting {
    font-size: 2.5rem;
    margin-bottom: 5px;
    margin-top: 5px;
    text-align: left;
  }

  .pro-pic {
    @include theme() {
      border: 2px solid t("modal-border-color");
    }
    box-shadow: 0 2px 2px $g188-transparent-4;
    z-index: 1;
  }

  .modal-body {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    text-align: center;
    padding: 26px 0 20px;

    p {
      color: $gaaa;
      font-size: 16px;
      margin-bottom: 15px;
    }

    h3 {
      font-size: 15px;
      margin-bottom: 5px;
      margin-top: 5px;
      text-align: left;
    }

    h4 {
      font-size: 15px;
      margin-bottom: 5px;
      margin-left: 20px;
      margin-top: 5px;
      text-align: left;
    }

    span {
      color: white;
    }

    button,
    input,
    select,
    textarea {
      font-family: inherit;
      font-size: inherit;
      margin-right: 20px;
      line-height: inherit;
    }

    .delete-link {
      color: red;
      text-align: center;
      margin-top: 15px;
      text-decoration: underline;
      &:hover {
        cursor: pointer;
      }
    }

    .delete-btn {
      color: white;
      text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
      background-color: red;
      padding: 6px 10px;
      margin: 10px;
    }

    .cancel-delete {
      background-color: grey;
    }

    .delete-btn-text {
      font-weight: bold;
      text-align: center;
    }

    .show-delete-dropdown {
      @include theme() {
        border-bottom: 1px solid t("modal-border-color");
      }
    }

    .Select {
      margin-bottom: 20px;
      margin-top: 10px;
    }

    .disclaimer {
      font-size: 11px;
      margin-bottom: 5px;
      margin-top: 0;
      text-align: left;
    }
  }

  .preference {
    padding: 0 20px 15px;

    .alert-danger {
      @include theme() {
        background-color: t("alert-danger-background");
        border-color: t("modal-border-color");
      }
    }
  }

  .preference-row {
    display: flex;
    padding: 0 0 15px;
    column-gap: 20px;
  }

  .preference-attn {
    background-color: $navy-transparent-14;
    border-bottom: 1px solid $gdee2ff;
    border-top: 1px solid $gdee2ff;
  }

  .user-settings-modal__notifications {
    @include theme() {
      border-bottom: 1px solid t("modal-border-color");
    }
    padding-top: 15px;

    &.preference-attn-yellow {
      background-color: rgba(251, 247, 43, 0.26);
      border-bottom: 1px solid rgba(101, 71, 42, 0.17);
      border-top: 1px solid rgba(101, 71, 42, 0.17);
      color: rgb(101, 71, 42);
    }

    h4 {
      color: $gaaa;
      float: left;
      font-size: 16px;
      line-height: 20px;
      margin: 0;
    }
  }

  .disclaimer {
    &.ctr {
      margin-bottom: 0;
      margin-top: 11px;
      text-align: center;
    }
  }
}

.user-settings-modal__notifications {
  &.preference-attn {
    h4 {
      color: $primary-navy;
    }
  }

  a {
    &,
    &:link,
    &:visited {
      color: #5ac8fb;
      cursor: pointer;
      float: right;
    }

    &:hover {
      color: #1888bc;
    }

    &:active {
      color: #51a9d2;
    }
  }

  &.second {
    border-top: 0;
  }
}

.modal-body {
  .user-settings-modal__notifications {
    h3 {
      font-size: 14px;
      font-weight: bold;
      line-height: 20px;
      margin: 0 20px 0 0;
    }
  }
}

@media (max-width: 766px) {
  .user-settings-modal {
    .modal-body {
      padding: 22px 0 20px;

      p {
        font-size: 14px;
      }
    }
  }
}

@media (max-width: 499px) {
  .user-settings-modal {
    .modal-body {
      p {
        font-size: 12px;
      }
    }
  }
}

